BRO-43 Repair menu on mobile

--- a/apps/employee/src/scss/Pages/components/NavPanel/_Menu.scss
+++ b/apps/employee/src/scss/Pages/components/NavPanel/_Menu.scss
@@ -1,13 +1,24 @@
 .menu {
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
   transition:
     max-width $animation-short ease-in-out,
     min-width $animation-short ease-in-out;
 
+  @media (min-width: $screen-md) {
+    min-width: 300px;
+    max-width: 300px;
+  }
+
   &--hidden {
-    min-width: 44px;
-    max-width: 44px;
+    min-width: 0;
+    max-width: 0;
+
+    @media (min-width: $screen-md) {
+      min-width: 44px;
+      max-width: 44px;
+    }
   }
 
   &__link {
@@ -16,7 +27,7 @@
     align-items: center;
     padding: $spacing-x2 $spacing-x2;
     margin-bottom: $spacing-x1;
-    overflow: hidden;
+    // overflow: hidden;
     color: $white;
   }
 }
